footer and data pt1 done

--- a/src/components/qualification/qualification.css
+++ b/src/components/qualification/qualification.css
@@ -1,6 +1,7 @@
 
 .qualification__container {
     max-width: 768px;
+    height: 450px;
 }
 
 .qualification__tabs {
@@ -10,15 +11,11 @@
 }
 
 .qualification__button {
-    font-size: var(--h3-font-size);
+    font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
     color: var(--title-color);
     margin: 0 var(--mb-1);
     cursor: pointer;
-}
-
-.qualification__button:hover {
-    color: var(--title-color-dark);
 }
 
 .qualification__icon {
@@ -27,7 +24,12 @@
 }
 
 .qualification__active {
-    color: var(--title-color-dark);
+    border: 1px solid;
+    border-color: var(--title-color);
+    border-radius: 1rem;
+    padding: 0 .75rem;
+    background-color: hsl(var(--hue), var(--sat), 35%);
+    color: var(--container-color);
 }
 
 .qualification__sections {
