--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -8,7 +8,7 @@
     position: relative;
     border: 1px solid rgba(0, 0, 0, .1);
     background-color: var(--container-color);
-    padding: 6rem 0 2rem 2.5rem;
+    padding: 4rem 0 2rem 2.5rem;
 }
 
 .projects__icon {
@@ -85,6 +85,11 @@
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-1);
+}
+
+.projects__modal-subtitle {
+    display: flex;
+    column-gap: 1rem;
 }
 
 .projects__modal-description {
