--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -14,6 +14,7 @@
 .footer__title {
     font-size: var(--h3-font-size);
     text-align: center;
+    margin-top: var(--mb-2);
     margin-bottom: var(--mb-2);
 }
 
