--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -10,6 +10,7 @@
     justify-self: center;
 }
 
+
 .about__info {
     grid-template-columns: repeat(3, 140px);
     gap: .5rem;
@@ -40,7 +41,7 @@
 }
 
 .about__description {
-    padding: 0 4rem 0 0;
+    padding: 0 .6rem 0 0;
     margin-bottom: var(--mb-2-5);
 }
 
